--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ DEBUG=TRUE
 # Front-End Variables
 BASENAME=/
 BACKEND_URL=https://sample-service-name-w3sa.onrender.com/api
+
+export FLASK_APP=src/app.py
