--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,4 @@ DEBUG=TRUE
 BASENAME=/
 BACKEND_URL=https://sample-service-name-w3sa.onrender.com/api
 
-export FLASK_APP=src/app.py
+export FLASK_APP="src/app.py"
